[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localcat"
dynamic = ["version", "dependencies"]
requires-python = ">=3.8"
authors = [
  { name="Ewen Wang", email="wang.enqun@outlook.com" },
]
description = "Fine-tune Large Language Models locally."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["llm", "finetune", "ai", "aws"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ewen2015/LocalCat"
Documentation = "https://localcat.readthedocs.io"
Repository = "https://github.com/Ewen2015/LocalCat.git"
Issues = "https://github.com/Ewen2015/LocalCat/issues"

[tool.setuptools.dynamic]
version = {attr = "localcat.__version__"}
dependencies = {file = ["requirements.txt"]}